@@ -2,6 +2,7 @@
  - feat: force-distance metadata can now be saved and loaded for
    the .tab file format (#3)
  - feat: implement new HDF5-based file format (read/write)
+ - feat: support piezo height (JPK file format)
 0.5.2
  - ref: drop pandas dependency (#2)
 0.5.1
